Add comments to the configuration file
These comments should help explain what the different config lines are for.

--- a/config.ini
+++ b/config.ini
@@ -1,5 +1,9 @@
 [App]
+;icon to be used in the splashscreen, which is shown while the server is starting
 icon = /re/log/wwwroot/Images/Logo.png
+; path to the .NET web application on which re/app will execute `dotnet run`
 path = /re/log
+; title shown in the titlebar
 title = re/app
+; url to load once the server is up
 url = http://localhost:7000/
