--- a/_internal/config.ini
+++ b/_internal/config.ini
@@ -4,6 +4,6 @@ icon = /re/log/wwwroot/Images/Logo.png
 ; path to the .NET web application on which re/app will execute `dotnet run`
 path = /re/log
 ; title shown in the titlebar
-title = re/app
+title = re/log
 ; url to load once the server is up
 url = http://localhost:7000/
