Add optional close confirmation dialog
A `close_confirmation` property has been added to `config.ini`. When defined,
a confirmation dialog will be shown when the user attempts to close the application.

It is disabled by default.

--- a/_internal/config.ini
+++ b/_internal/config.ini
@@ -7,3 +7,5 @@ path = /re/log
 title = re/log
 ; url to load once the server is up
 url = http://localhost:7000/
+; confirmation message shown when the user tries to close the app. If it is not defined, then the app will close without confirmation.
+; close_confirmation = Are you sure you want to exit?
